[web] Fix "See more..." button alignment regression
Summary: Noticed another regression in the latest deploy of the web app. This change moves the "See more..." text so it's aligned with the text on the sidebars.

Test Plan:
Before:
{F75157}

Looks as expected on Chrome/Safari:
{F75156}

Reviewers: atul

Reviewed By: atul

Subscribers: ashoat, palys-swm, Adrian

Differential Revision: https://phab.comm.dev/D4278

--- a/web/chat/chat-thread-list.css
+++ b/web/chat/chat-thread-list.css
@@ -167,7 +167,7 @@ div.sidebarTitle.unread {
   color: var(--fg);
 }
 div.seeMoreButton {
-  padding-left: 54px;
+  padding-left: 58px;
 }
 div.sidebarLastActivity {
   white-space: nowrap;
